--- a/Ex03.md
+++ b/Ex03.md
@@ -1,8 +1,8 @@
 # Ex. No : 3	
-## NAME : RAJKUMAR T
-
-# RECOGNITION OF A VALID ARITHMETIC EXPRESSION THAT USES
-## REG NO: 212224040263
+# RECOGNITION OF A VALID ARITHMETIC EXPRESSION THAT USES YACC
+### Name : RAJKUMAR T
+### Register Number : 212224040263
+### Date : 21-11-25
 
 ## AIM   
 To write a yacc program to recognize a valid arithmetic expression that uses operator +,- ,* and /.
@@ -18,68 +18,66 @@ To write a yacc program to recognize a valid arithmetic expression that uses ope
 8.	Enter an arithmetic expression as input and the tokens are identified as output.
 
 ## PROGRAM
-arth.l
-
-%{
-#include "y.tab.h"
+f2.y
+```
+ %{
 #include <stdio.h>
+int yylex(void);
+void yyerror(const char *s);
 %}
-
-%%
-
-"="     { printf("\nOperator is EQUAL"); return '='; }
-"+"     { printf("\nOperator is PLUS"); return PLUS; }
-"-"     { printf("\nOperator is MINUS"); return MINUS; }
-"/"     { printf("\nOperator is DIVISION"); return DIVISION; }
-"*"     { printf("\nOperator is MULTIPLICATION"); return MULTIPLICATION; }
-[a-zA-Z][a-zA-Z0-9]*  { printf("\nIdentifier is %s", yytext); return ID; }
-.       { return yytext[0]; }
-\n      { return 0; }
-
-%%
-
-int yywrap() {
-    return 1;
-}
-
-
-arth.y
-
-
-%{
-#include <stdio.h>
-/* This YACC program is for recognizing the Expression */
-%}
-
 %token ID PLUS MINUS MULTIPLICATION DIVISION
-
 %%
-
 statement: ID '=' E {
-printf("\nValid arithmetic expression");
-$$ = $3;
+    printf("\nValid arithmetic expression\n");
+    $$ = $3;
 }
 ;
 E: E PLUS ID
-| E MINUS ID
-| E MULTIPLICATION ID
-| E DIVISION ID
-| ID
+ | E MINUS ID
+ | E MULTIPLICATION ID
+ | E DIVISION ID
+ | ID
 ;
+%%
+extern FILE* yyin;
+int main() {
+    yyin = stdin;
+    do {
+        yyparse();
+    } while (!feof(yyin));
+    return 0;
+}
+void yyerror(const char *s) {
+    fprintf(stderr, "Error: %s\n", s);
+}
+```
+f2.l
+```
+%{
+#include "y.tab.h"
+%}
 
 %%
-extern FILE* yyin; int main() {
-do {
-yyparse();
-} while (!feof(yyin)); return 0;
+
+"=" { printf("\n Operator is EQUAL"); return '='; } 
+"+" { printf("\n Operator is PLUS"); return PLUS; }
+"-" { printf("\n Operator is MINUS"); return MINUS; }
+"/" { printf("\n Operator is DIVISION"); return DIVISION; }
+"*" { printf("\n Operator is MULTIPLICATION"); return MULTIPLICATION; } 
+[a-zA-Z]*[0-9]* { printf("\n Identifier is %s", yytext); return ID; }
+. { return yytext[0]; }
+\n { return 0; }
+
+%%
+
+int yywrap() { return 1;
 }
-
-void yyerror(char *s) { fprintf(stderr, "Error: %s\n", s);
-}
-
-
+```
 ## OUTPUT 
-<img width="1920" height="1200" alt="image" src="https://github.com/user-attachments/assets/5ed76833-987c-4c1d-a522-327fd5470483" />
+
+Valid expression:
+<img width="567" height="248" alt="Screenshot from 2025-10-24 10-58-25" src="https://github.com/user-attachments/assets/c941e55c-701f-4859-97cd-57a250e9fb6c" />
+
 
 ## RESULT
 A YACC program to recognize a valid arithmetic expression that uses operator +,-,* and / is executed successfully and the output is verified.
