--- a/Ex04.md
+++ b/Ex04.md
@@ -1,8 +1,7 @@
 # Ex. No : 4	
-
 # RECOGNITION OF A VALID VARIABLE WHICH STARTS WITH A LETTER FOLLOWED BY ANY NUMBER OF LETTERS OR DIGITS USING YACC
-## NAME : RAJKUMAR T
 ## Register Number :212224040263
+## Date : 20.11.25
 
 ## AIM   
 To write a YACC program to recognize a valid variable which starts with a letter followed by any number of letters or digits.
@@ -18,77 +17,104 @@ To write a YACC program to recognize a valid variable which starts with a letter
 8.	Enter a statement as input and the valid variables are identified as output.
 
 ## PROGRAM
-variable_test.l
-
+f3.l
+```
 %{
-#include "y.tab.h"
 #include <stdio.h>
+#include <string.h>
+#include <stdlib.h>
+#include "y.tab.h"
 %}
 
 %%
+"int"                   { return INT; }
+"float"                 { return FLOAT; }
+"double"                { return DOUBLE; }
 
-"int"      { return INT; }
-"float"    { return FLOAT; }
-"double"   { return DOUBLE; }
+[a-zA-Z_][a-zA-Z0-9_]*  {
+                            yylval.sval = strdup(yytext); 
+                            return ID;
+                        }
 
-[a-zA-Z][a-zA-Z0-9]*   { printf("\nIdentifier is %s", yytext); return ID; }
-","                    { return ','; }
-";"                    { return ';'; }
-\n                     { return 0; }
-[ \t]                  { /* ignore spaces */ }
-.                      { return yytext[0]; }
-
+";"                     { return SEMICOLON; }
+","                     { return COMMA; }
+[\t ]+                  ;       /* Skip spaces and tabs */
+\n                      ;       /* Ignore newlines */
+.                       { return yytext[0]; }   /* Catch-all */
 %%
 
 int yywrap(void) {
     return 1;
 }
 
+```
 
-
-variable_test.y
-
-
+f3.y
+```
 %{
 #include <stdio.h>
 #include <stdlib.h>
+#include <string.h>
 
-void yyerror(char *s);
-int yytext(void);
+int yylex(void);
+void yyerror(const char *s);
 %}
 
-%token ID INT FLOAT DOUBLE
+/* Define union for semantic values */
+%union {
+    char *sval;
+}
+
+/* Token declarations */
+%token INT FLOAT DOUBLE
+%token <sval> ID
+%token SEMICOLON COMMA
 
 %%
 
-S : T L ';'          { printf("\nValid declaration.\n"); }
-  ;
+program:
+    declarations
+    ;
 
-L : L ',' ID         { printf("\nAnother variable: %s", yytext); }
-  | ID               { printf("\nFirst variable: %s", yytext); }
-  ;
+declarations:
+      declaration
+    | declarations declaration
+    ;
 
-T : INT              { printf("\nType: int"); }
-  | FLOAT            { printf("\nType: float"); }
-  | DOUBLE           { printf("\nType: double"); }
-  ;
+declaration:
+    type id_list SEMICOLON
+    ;
+
+type:
+      INT
+    | FLOAT
+    | DOUBLE
+    ;
+
+id_list:
+      ID                  { printf("Identifier found: %s\n", $1); free($1); }
+    | id_list COMMA ID    { printf("Identifier found: %s\n", $3); free($3); }
+    ;
 
 %%
 
-int main() {
-    printf("Enter declaration: ");
+int main(void) {
+    printf("Enter a variable declaration (e.g., int a, b;):\n");
     yyparse();
+    printf("Parsing complete.\n");
     return 0;
 }
 
-void yyerror(char *s) {
-    fprintf(stderr, "\nError: %s\n", s);
+void yyerror(const char *s) {
+    fprintf(stderr, "Parsing Error: %s\n", s);
 }
 
-
-
+```
 ## OUTPUT 
-<img width="1920" height="1200" alt="image" src="https://github.com/user-attachments/assets/867ba734-2c7b-4b06-9027-4988ecf06394" />
+<img width="607" height="165" alt="Screenshot from 2025-10-25 14-52-23" src="https://github.com/user-attachments/assets/eac4d3dd-6d70-40e5-81bc-b8d73b20e28c" />
+
 
 ## RESULT
 A  YACC program to recognize a valid variable which starts with a letter followed by any number of letters or digits is executed successfully and the output is verified.
+
+
