--- a/Ex05.md
+++ b/Ex05.md
@@ -1,7 +1,7 @@
 # Ex. No : 5	
 # RECOGNITION OF THE GRAMMAR (a<sup>n</sup>b where n>=10) USING YACC
-## NAME : RAJKUMAR T
 ## Register Number :212224040263
+## Date : 20-11-25
 
 ## AIM   
 To write a YACC program to recognize the grammar a<sup>n</sup>b where n>=10.
@@ -17,62 +17,67 @@ To write a YACC program to recognize the grammar a<sup>n</sup>b where n>=10.
 8.	Enter a string as input and it is identified as valid or invalid.
  
 ## PROGRAM
-anb.l
-
+f4.l
+```
 %{
-/* Definition section */ #include "y.tab.h"
+/* Definition section */
+#include "y.tab.h"
 %}
 
 /* Rule Section */
 %%
-[aA] {return A;}
-[bB] {return B;}
-\n {return NL;}
-. {return yytext[0];}
+[aA]        { return A; }
+[bB]        { return B; }
+\n          { return NL; }
+.           { return yytext[0]; }
 %%
 
-int yywrap()
+int yywrap(void)
 {
-return 1;
+    return 1;
 }
-
-
-
-
-
-
-anb.y
-
+```
+f4.y
+```
 %{
-#include<stdio.h>
-#include<stdlib.h>
+#include <stdio.h>
+#include <stdlib.h>
+
+int yylex(void);
+void yyerror(const char *msg);
 %}
 
+/* Declare tokens */
 %token A B NL
 
 %%
-stmt: S NL { printf("valid string\n"); exit(0); };
-S: A S B | ;
+/* Grammar rules */
+
+stmt: S NL               { printf("valid string\n"); exit(0); }
+    ;
+
+S: A S B                 /* a matched pair of A and B, possibly nested */
+ |                       /* empty (epsilon) */
+    ;
 %%
 
-int yyerror(char *msg)
-{
-    printf("invalid string\n");
-    exit(0);
-}
-
-int main()
+int main(void)
 {
     printf("enter the string\n");
     yyparse();
     return 0;
 }
 
+void yyerror(const char *msg)
+{
+    printf("invalid string\n");
+    exit(0);
+}
 
-
-
+```
 ## OUTPUT 
-<img width="744" height="498" alt="image" src="https://github.com/user-attachments/assets/a7b4b548-0333-4c3d-a391-7e9907d6d4a1" />
+<img width="607" height="165" alt="Screenshot from 2025-10-25 15-11-26" src="https://github.com/user-attachments/assets/98218741-debc-41ad-9c27-8fbd5e81eaa9" />
 
 ## RESULT
 The YACC program to recognize the grammar anb where n>=10 is executed successfully and the output is verified.
+
