Revise Ex06.md with updates and formatting
Updated the document with new registration number and date, cleaned up code sections, and modified output images.

--- a/Ex06.md
+++ b/Ex06.md
@@ -1,7 +1,7 @@
 # Ex. No : 6	
 # IMPLEMENTATION OF THE BACK END OF THE COMPILER 
-## NAME : RAJKUMAR T
-## Register Number : 212224040263
+## Register Number :212224040263
+## Date : 21-11-25
 
 ## AIM   
 To write a program to implement the back end of the compiler.
@@ -15,11 +15,11 @@ To write a program to implement the back end of the compiler.
 6.	Stop the program.
 
 ## PROGRAM
-
-program.c
-
-
-#include <stdio.h> #include <ctype.h> #include <stdlib.h>
+p.c
+```
+#include <stdio.h> 
+#include <ctype.h> 
+#include <stdlib.h>
 
 int main() {
 int i = 2, j = 0, k = 2, k1 = 0; char ip[10], kk[10];
@@ -49,20 +49,18 @@ k = 0;
 fclose(fp);
 return 0;
 }
-
-
-k.txt
-
-
+```
+p.txt
+```
 X=a-b 
 Y=a-c 
 Z=a+b 
 C=a-b 
 C=a-b
 
-
+```
 ## OUTPUT 
-<img width="1143" height="498" alt="image" src="https://github.com/user-attachments/assets/91f6363a-c2ae-4910-a86e-bfe36f144691" />
+<img width="480" height="270" alt="Screenshot from 2025-10-25 16-05-08" src="https://github.com/user-attachments/assets/cb49cde7-b834-42f6-a627-f7588b07d052" />
 
 ## RESULT
 The back end of the compiler is implemented successfully, and the output is verified.
